[package]
name = "py-autosar-data"
version = "0.9.0"
edition = "2021"
description = "read, write and modify Autosar arxml data using Python"
authors = ["Daniel Thaler <daniel@dthaler.de>"]
license = "MIT OR Apache-2.0"
keywords = ["arxml", "automotive", "file-format", "Autosar"]

[lib]
name = "autosar_data"
crate-type = ["cdylib"]

[dependencies]
autosar-data = {version = "0.15"}
autosar-data-specification = {version = "0.15"}
pyo3 = "0.22.5"
