[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "autosar-data"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"
description = "read, write and modify Autosar arxml data using Python"
authors = [{name="Daniel Thaler", email="daniel@dthaler.de"}]
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
